--- a/craftercms-plugin.yaml
+++ b/craftercms-plugin.yaml
@@ -15,7 +15,7 @@ plugin:
   version:
     major: 1
     minor: 0
-    patch: 9
+    patch: 10
   description: |
     A simple Video Gallery site blueprint.
   website:
@@ -68,6 +68,9 @@ plugin:
     - major: 3
       minor: 1
       patch: 11
+    - major: 3
+      minor: 1
+      patch: 12
     - major: 3
       minor: 2
       patch: 0
