--- a/craftercms-plugin.yaml
+++ b/craftercms-plugin.yaml
@@ -15,7 +15,7 @@ plugin:
   version:
     major: 1
     minor: 0
-    patch: 11
+    patch: 12
   description: |
     A simple Video Gallery site blueprint.
   website:
@@ -76,6 +76,9 @@ plugin:
       patch: 13
     - major: 3
       minor: 2
+      patch: 0
+    - major: 4
+      minor: 0
       patch: 0
   crafterCmsEditions:
     - community
