--- a/craftercms-plugin.yaml
+++ b/craftercms-plugin.yaml
@@ -15,7 +15,7 @@ plugin:
   version:
     major: 1
     minor: 0
-    patch: 13
+    patch: 14
   description: |
     A simple Video Gallery site blueprint.
   website:
@@ -74,6 +74,9 @@ plugin:
     - major: 3
       minor: 1
       patch: 13
+    - major: 3
+      minor: 1
+      patch: 14
     - major: 3
       minor: 2
       patch: 0
