--- a/craftercms-plugin.yaml
+++ b/craftercms-plugin.yaml
@@ -15,7 +15,7 @@ plugin:
   version:
     major: 1
     minor: 0
-    patch: 16
+    patch: 17
   description: |
     A simple Video Gallery site blueprint.
   website:
@@ -77,6 +77,9 @@ plugin:
     - major: 3
       minor: 1
       patch: 14
+    - major: 3
+      minor: 1
+      patch: 15
   crafterCmsEditions:
     - community
     - enterprise
