--- a/craftercms-plugin.yaml
+++ b/craftercms-plugin.yaml
@@ -15,7 +15,7 @@ plugin:
   version:
     major: 1
     minor: 0
-    patch: 18
+    patch: 19
   description: |
     A simple Video Gallery site blueprint.
   website:
@@ -83,6 +83,9 @@ plugin:
     - major: 3
       minor: 1
       patch: 16
+    - major: 3
+      minor: 1
+      patch: 17
   crafterCmsEditions:
     - community
     - enterprise
