--- a/craftercms-plugin.yaml
+++ b/craftercms-plugin.yaml
@@ -15,7 +15,7 @@ plugin:
   version:
     major: 1
     minor: 0
-    patch: 19
+    patch: 20
   description: |
     A simple Video Gallery site blueprint.
   website:
@@ -86,6 +86,12 @@ plugin:
     - major: 3
       minor: 1
       patch: 17
+    - major: 3
+      minor: 1
+      patch: 18
+    - major: 3
+      minor: 1
+      patch: 19
   crafterCmsEditions:
     - community
     - enterprise
