Updated version numbers.

--- a/craftercms-plugin.yaml
+++ b/craftercms-plugin.yaml
@@ -15,7 +15,7 @@ plugin:
   version:
     major: 1
     minor: 0
-    patch: 22
+    patch: 23
   description: |
     A simple Video Gallery site blueprint.
   website:
@@ -95,6 +95,12 @@ plugin:
     - major: 3
       minor: 1
       patch: 20
+    - major: 3
+      minor: 1
+      patch: 21
+    - major: 3
+      minor: 1
+      patch: 22
   crafterCmsEditions:
     - community
     - enterprise
