--- a/craftercms-plugin.yaml
+++ b/craftercms-plugin.yaml
@@ -15,7 +15,7 @@ plugin:
   version:
     major: 1
     minor: 0
-    patch: 26
+    patch: 27
   description: |
     A simple Video Gallery site blueprint.
   website:
@@ -113,6 +113,12 @@ plugin:
     - major: 3
       minor: 1
       patch: 26
+    - major: 3
+      minor: 1
+      patch: 27
+    - major: 3
+      minor: 1
+      patch: 28
   crafterCmsEditions:
     - community
     - enterprise
