--- a/craftercms-plugin.yaml
+++ b/craftercms-plugin.yaml
@@ -50,6 +50,9 @@ plugin:
     - major: 4
       minor: 0
       patch: 3
+    - major: 4
+      minor: 0
+      patch: 4
   crafterCmsEditions:
     - community
     - enterprise
