--- a/craftercms-plugin.yaml
+++ b/craftercms-plugin.yaml
@@ -15,7 +15,7 @@ plugin:
   version:
     major: 2
     minor: 0
-    patch: 37
+    patch: 38
   description: |
     A simple Video Gallery site blueprint.
   website:
@@ -50,6 +50,9 @@ plugin:
     - major: 4
       minor: 1
       patch: 1
+    - major: 4
+      minor: 1
+      patch: 2
   crafterCmsEditions:
     - community
     - enterprise
