--- a/craftercms-plugin.yaml
+++ b/craftercms-plugin.yaml
@@ -15,7 +15,7 @@ plugin:
   version:
     major: 2
     minor: 0
-    patch: 38
+    patch: 39
   description: |
     A simple Video Gallery site blueprint.
   website:
@@ -52,6 +52,21 @@ plugin:
       patch: 1
     - major: 4
       minor: 1
+      patch: 2
+    - major: 4
+      minor: 1
+      patch: 3
+    - major: 4
+      minor: 1
+      patch: 4
+    - major: 4
+      minor: 2
+      patch: 0
+    - major: 4
+      minor: 2
+      patch: 1
+    - major: 4
+      minor: 2
       patch: 2
   crafterCmsEditions:
     - community
