--- a/craftercms-plugin.yaml
+++ b/craftercms-plugin.yaml
@@ -15,7 +15,7 @@ plugin:
   version:
     major: 2
     minor: 0
-    patch: 39
+    patch: 40
   description: |
     A simple Video Gallery site blueprint.
   website:
@@ -59,6 +59,12 @@ plugin:
     - major: 4
       minor: 1
       patch: 4
+    - major: 4
+      minor: 1
+      patch: 5
+    - major: 4
+      minor: 1
+      patch: 6
     - major: 4
       minor: 2
       patch: 0
