--- a/craftercms-plugin.yaml
+++ b/craftercms-plugin.yaml
@@ -15,7 +15,7 @@ plugin:
   version:
     major: 2
     minor: 0
-    patch: 46
+    patch: 47
   description: |
     A simple Video Gallery site blueprint.
   website:
@@ -48,6 +48,8 @@ plugin:
       minor: 1
     - major: 4
       minor: 2
+    - major: 4
+      minor: 3
     - major: 5
       minor: 0
   crafterCmsEditions:
